added whatsapp no

--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
                         </a>
                     </div>
                         <span>
-                            <a href="https://wa.me/2340867616054" class="whatsapp_float" target="_blank"> <i
+                            <a href="https://wa.me/2348143765534?text=Hello%20iMock%20Team,%20in%20can%20you%20tell%20me%20more%20about...." class="whatsapp_float" target="_blank"> <i
                                 class="fa fa-whatsapp whatsapp-icon"></i></a>
                             </span>
                         
